# complex-library

./: .gitignore  CMakeLists.txt  LICENSE  READ.md  main.cpp
docs/: Doxyfile
src/: CMakeLists.txt
src/complex/: CMakeLists.txt  IComplexNumber.h  PolarComplex.cpp  PolarComplex.h  RectangularComplex.cpp  RectangularComplex.h
src/utils/: CMakeLists.txt  ComplexCalculator.cpp  ComplexConverter.cpp
tests/complex/: CMakeLists.txt  ut_PolarComplex.cpp  ut_RectanglarNumber.cpp
tests/utils/: CMakeLists.txt  ut_ComplexCalculator.cpp  ut_ComplexConverter.cpp
